--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Demo Website Index Page</title>
     <link rel="stylesheet" href="styles.css">
 
-   <!-- Google Tag Manager -->
+<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-NW6N2T5S');</script>
+    })(window,document,'script','dataLayer','GTM-NB3LKSKF');</script>
     <!-- End Google Tag Manager -->
 
 </head>
@@ -21,7 +21,7 @@
 <body>
 
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NW6N2T5S"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB3LKSKF"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
