added meta description and changed title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo Website Index Page</title>
+    <meta name="description" content="A brief description of the page content.">
+    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <meta name="author" content="sooraj">
+
+    <title>Digital marketing agency in trivandrum</title>
     <link rel="stylesheet" href="styles.css">
 
 <!-- Google Tag Manager -->
