added meta keyword and meta description

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A brief description of the page content.">
-    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <meta name="description" content="Looking for the best digital marketing company in Trivandrum? Our expert SEO and social media agency offers top-notch services to boost your online presence. Partner with us to grow your business through effective digital strategies tailored to your needs.">
+    <meta name="keywords" content="Best Digital Marketing Company in Trivandrum">
     <meta name="author" content="sooraj">
 
     <title>Digital marketing agency in trivandrum</title>
